--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta charset="utf-8">
 		<title>凪Ze - wyz.rhopaper.top</title>
-        <link rel="icon" type="image/jpg" href="images/avatar.jpg">
+		<meta name="description" content="凪Ze的个人主页，有关凪Ze的各种信息内容。- wyz.rhopaper.top">。
+	        <link rel="icon" type="image/jpg" href="images/avatar.jpg">
 		<link href="css/menu.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/buttons.css">
 		<link rel="stylesheet" id="patternfly-adjusted-css" href="css/syb.css" type="text/css" media="all">
